static/css/svg_output_page.css
.onoffswitch {
    position: relative;
    width: 148px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

.onoffswitch-checkbox {
    display: none;
}

.onoffswitch-label {
    display: block;
    overflow: hidden;
    cursor: pointer;
    border: 2px solid #999999;
    border-radius: 20px;
}

.onoffswitch-inner {
    display: block;
    width: 200%;
    margin-left: -100%;
    transition: margin 0.3s ease-in 0s;
}

.onoffswitch-inner:before, .onoffswitch-inner:after {
    display: block;
    float: left;
    width: 50%;
    height: 30px;
    padding: 0;
    line-height: 30px;
    font-size: 14px;
    color: white;
    font-family: Trebuchet, Arial, sans-serif;
    font-weight: bold;
    box-sizing: border-box;
}

.onoffswitch-inner:before {
    content: "Temperature";
    padding-left: 10px;
    background-color: #113255;
    color: #F2C413;
}

.onoffswitch-inner:after {
    content: "Carbon Dioxide";
    padding-right: 10px;
    background-color: #F2C413;
    color: #113255;
    text-align: right;
}

.onoffswitch-switch {
    display: block;
    width: 20px;
    margin: 5px;
    background: #FFFFFF;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 114px;
    border: 2px solid #999999;
    border-radius: 20px;
    transition: all 0.3s ease-in 0s;
}

.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
    margin-left: 0;
}

.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
    right: 0px;
}

